--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation Dependencies.Kotlin.kotlin_stdlib_jdk7
 
+    //Modules
+    implementation project(Dependencies.Module.contentScraper)
+
     //Android X
     implementation Dependencies.AndroidX.appcompat
     implementation Dependencies.AndroidX.materialDesign
