--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: Dependencies.Plugins.ANDROID_APPLICATION
 apply plugin: Dependencies.Plugins.KOTLIN_ANDROID
 apply plugin: Dependencies.Plugins.KOTLIN_ANDROID_EXTENSIONS
 apply plugin: Dependencies.Plugins.KOTLIN_KAPT
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion Version.compileSdk
@@ -41,8 +42,23 @@ dependencies {
     implementation Dependencies.AndroidX.constraintlayout
     implementation Dependencies.AndroidX.vectordrawable
     implementation Dependencies.AndroidX.core
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     //Testing
     testImplementation Dependencies.Test.test_junit
     androidTestImplementation Dependencies.Test.android_test_espresso_core
+
+    //RxJava
+    implementation Dependencies.RxJava.rxAndroid
+
+    //LifeCycle
+    implementation Dependencies.Lifecycle.lifeCycleExtension
+
+    //Dagger2
+    implementation Dependencies.Dagger.dagger2
+    implementation Dependencies.Dagger.daggerAndroid
+    implementation Dependencies.Dagger.daggerAndroidSupport
+    kapt Dependencies.Dagger.processor
+    kapt Dependencies.Dagger.compiler
 }
